# Struckmire

./: .gitignore  CMakeLists.txt  README.md
assets/textures/tiles/: grass.ase
src/: Entity.hpp  Key.hpp  Player.cpp  Player.hpp  Scale.cpp  Scale.hpp  Tile.cpp  Tile.hpp  main.cpp
